_sass/site/_skills.scss
.skills {
  background-color: $primary-color-dark;
  padding-top: 6rem;
  padding-bottom: 10rem;
  color: #FFF;
  text-align: center;
  background-image: url('../assets/plant.svg');
  background-repeat: no-repeat;
  background-position-x: 90%;
  background-position-y: 100%;
  background-size: 100px;

  .wrapper {
    display: flex;
    flex-direction: column;
    flex-wrap: wrap;
  }

  .section-header {
    margin-bottom: 2rem;
    flex: 1 1 100%;
    width: 100%;
  }

  .legend {
    font-size: 120%;
  }

  .tooltip {
    position: relative;
    display: flex;
    width: 2rem;
    height: 2rem;
    align-items: center;
    justify-content: center;
    background-color: $tertiary-color;
    margin: 0 auto;
    border-radius: 50%;
    transition: background-color 222ms ease-in-out;

    .tooltip-content {
      position: absolute;
      display: none;
      background-color: $tertiary-color;
      font-size: 0.9rem;
      border-radius: 8px;
      border: 1px solid $tertiary-color;
      margin: 0;
      left: 50%;
      top: 75%;
      transform: translateX(-50%);
    }

    &:hover {
      background-color: $tertiary-color;

      .tooltip-content {
        display: block;
      }

    }
  }

  .category {
    flex: 1 1 100%;
    max-width: 100%;
    padding-left: 0.5rem;
    padding-right: 0.5rem;
    box-sizing: border-box;
  }

  .category-title {
    display: flex;
    flex-direction: row;
    align-items: center;
    &::before,
    &::after {
      flex: 1 1 auto;
      content: "";
      display: inline-block;
      height: 0px;
      border: 1px solid rgba(255, 255, 255, 0.1);
    }
    &::before {
      margin-right: 0.5rem;
    }
    &::after {
      margin-left: 0.5rem;
    }
  }

  h3 {
    color: rgba(255, 255, 255, 0.65);
  }

  .skill-group {
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    justify-content: center;
    margin-bottom: 2rem;
    margin-left: -0.5rem;
    margin-right: -0.5rem;
    box-sizing: border-box;
  }

  .skill {
    flex: 1 1 20%;
    margin: 0.5rem;
    padding: 1rem;
    border-radius: 3px;
    box-sizing: border-box;
    white-space: nowrap;

    &.conf {
      background-color: rgba(0, 0, 0, 0.5);
    }

    &.comf {
      background-color: rgba(0, 0, 0, 0.25);
    }

    &.dab {
      background-color: rgba(0, 0, 0, 0.1);
    }

    h3 {
      margin-bottom: 0.25rem;
    }

    p {
      margin-bottom: 0;
    }

  }

  @media all and (min-width: 600px) {
    padding-bottom: 6rem;
    .wrapper {
      flex-direction: row;
    }
    .category {
      flex: 1 1 50%;
      max-width: 50%;
    }
  }

}

